--- a/.env.local
+++ b/.env.local
@@ -20,8 +20,9 @@ XERO_REDIRECT_URI=
 XERO_TENANT_ID=
 
 # RMS Integration (choose your provider)
-RMS_API_URL=
-RMS_API_KEY=
+RMS_API_URL=https://api.rmscloud.com
+RMS_API_KEY=123
+RMS_TENANT_ID=7C958C5EB59D2E0A
 
 # Email Service
 SENDGRID_API_KEY=
