--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "stripe": "^19.3.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "xero-node": "^13.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
