--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
     {
       "source": "/api/:path*",
       "destination": "/api/index"
+    },
+    {
+      "source": "/((?!api).*)",
+      "destination": "/index.html"
     }
   ]
 }
