--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@aws-sdk/lib-dynamodb": "^3.913.0",
     "@stripe/react-stripe-js": "^5.3.0",
     "@stripe/stripe-js": "^8.3.0",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.545.0",
+    "mongoose": "^8.19.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "resend": "^6.4.2",
     "stripe": "^19.3.0",
     "uuid": "^9.0.1",
     "xero-node": "^13.2.0"
