--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,11 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* Allow JS files */
+    "allowJs": true,
+    "checkJs": false
   },
   "include": ["src", "api"]
 }
