--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,8 @@
   "functions": {
     "api/index.ts": {
       "memory": 1024,
-      "maxDuration": 10
+      "maxDuration": 10,
+      "maxRequestBodySize": "50mb"
     }
   },
   "rewrites": [
