fix: api route vercel

--- a/vercel.json
+++ b/vercel.json
@@ -7,11 +7,13 @@
       "maxDuration": 10
     }
   },
-  "rewrites": [
+  "routes": [
     {
-      "source": "/api/:path*",
-      "destination": "/api/index"
-    },
+      "src": "/api/(.*)",
+      "dest": "/api/index"
+    }
+  ],
+  "rewrites": [
     {
       "source": "/((?!api).*)",
       "destination": "/index.html"
