--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
   },
   "rewrites": [
     {
+      "source": "/api/:path(.*)",
+      "destination": "/api/index"
+    },
+    {
       "source": "/((?!api).*)",
       "destination": "/index.html"
     }
