--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^8.19.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.6",
     "resend": "^6.4.2",
     "stripe": "^19.3.0",
     "uuid": "^9.0.1",
