--- a/.env.local
+++ b/.env.local
@@ -19,11 +19,30 @@ XERO_CLIENT_SECRET=
 XERO_REDIRECT_URI=
 XERO_TENANT_ID=
 
-# RMS Integration (choose your provider)
-RMS_API_URL=https://api.rmscloud.com
-RMS_API_KEY=123
-RMS_TENANT_ID=7C958C5EB59D2E0A
+# ==================== RMS Cloud Integration ====================
+# Agent Credentials (Partner-Specific - Same for all environments)
+# These identify YOU as the integration partner
+RMS_AGENT_ID=1236
+RMS_AGENT_PASSWORD=g?ockqvjy9Q
 
+# Client Credentials - SANDBOX (Testing Environment)
+# Use these for development and testing
+RMS_SANDBOX_CLIENT_ID=11281
+RMS_SANDBOX_CLIENT_PASSWORD=6k!Dp$N4
+
+# Client Credentials - PRODUCTION (Live Environment)
+# Replace these with actual production credentials from your customer
+# Customer must request these from RMS Support after module activation
+RMS_PRODUCTION_CLIENT_ID=2237
+RMS_PRODUCTION_CLIENT_PASSWORD=nC!83*tD
+
+# Module Type - Defines your integration permissions
+# Current access: Distribution (bookings, reservations, availability, rates, guests)
+RMS_MODULE_TYPE=Distribution
+
+# API Configuration
+RMS_API_URL=https://restapi12.rmscloud.com
+RMS_ENVIRONMENT=sandbox
 # Email Service
 SENDGRID_API_KEY=
 SENDGRID_FROM_EMAIL=
