--- a/.env.local
+++ b/.env.local
@@ -2,7 +2,7 @@
 
 # AWS Services
 AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+VITE_AWS_SECRET_ACCESS_KEY=
 AWS_REGION=ap-southeast-2
 COGNITO_USER_POOL_ID=
 COGNITO_CLIENT_ID=
